Fix: z-index of error pop ups

--- a/srcs/frontend/css/index.css
+++ b/srcs/frontend/css/index.css
@@ -64,7 +64,7 @@ div#div-errors {
     top: 20px;
     left: 20px;
     padding: 0;
-    z-index: 1000;
+    z-index: -1;
 }
 
 div.error {
